cft.yml
---
AWSTemplateFormatVersion: 2010-09-09
Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 172.16.0.0/16
  PublicSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: VPC
      CidrBlock: 172.16.0.0/24
      MapPublicIpOnLaunch: true
  InternetGateway:
    Type: AWS::EC2::InternetGateway
  GatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId:
        Ref: VPC
      InternetGatewayId:
        Ref: InternetGateway
  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: VPC
  PublicRoute:
    Type: AWS::EC2::Route
    DependsOn: GatewayAttachment
    Properties:
      RouteTableId:
        Ref: PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: InternetGateway
  PublicSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId:
        Ref: PublicSubnet
      RouteTableId:
        Ref: PublicRouteTable
  ContainerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Factorio1
      VpcId:
        Ref: VPC
      SecurityGroupIngress:
        - IpProtocol: udp
          FromPort: 34197
          ToPort: 34197
          CidrIp: 0.0.0.0/0
  ExecutionRole:
    Type: AWS::IAM::Role
    Properties:
      RoleName: Factorio1ExecutionRole
      Path: /
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Principal:
              Service: ecs-tasks.amazonaws.com
            Action: sts:AssumeRole
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/service-role/AmazonECSTaskExecutionRolePolicy
      Policies:
        - PolicyName: Factorio1ExecutionPolicy
          PolicyDocument:
            Version: 2012-10-17
            Statement:
              - Effect: Allow
                Action:
                  - secretsmanager:GetSecretValue
                Resource: !Sub "arn:aws:secretsmanager:${AWS::Region}:${AWS::AccountId}:secret:Factorio1/DockerHub-pGlPhC"
                      
  TaskRole:
    Type: AWS::IAM::Role
    Properties:
      RoleName: Factorio1TaskRole
      AssumeRolePolicyDocument:
        Statement:
          - Effect: Allow
            Principal:
              Service: ecs-tasks.amazonaws.com
            Action: sts:AssumeRole
      Policies:
        - PolicyName: Factorio1TaskPolicy
          PolicyDocument:
            Version: 2012-10-17
            Statement:
              - Effect: Allow
                Action:
                  - s3:DeleteObject
                  - s3:GetBucketLocation
                  - s3:GetObject
                  - s3:ListBucket
                  - s3:PutObject
                Resource:
                  - arn:aws:s3:::factorio1
                  - arn:aws:s3:::factorio1/*
  LogGroup: 
    Type: AWS::Logs::LogGroup
    Properties: 
      RetentionInDays: 7
  TaskDefinition: 
    Type: AWS::ECS::TaskDefinition
    DependsOn: LogGroup
    Properties:
      Cpu: 4096
      Memory: 12GB
      NetworkMode: awsvpc
      RequiresCompatibilities:
        - FARGATE
      ExecutionRoleArn:
        Ref: ExecutionRole
      TaskRoleArn:
        Ref: TaskRole
      ContainerDefinitions:
        - Name: factorio1
          Image: titaniteslab/factorio-server:latest
          RepositoryCredentials:
            CredentialsParameter: Factorio1/DockerHub
          Command:
            - ./scripts/start.sh
            - Spaghetti1
          PortMappings: 
            - ContainerPort: 34197
              HostPort: 34197
              Protocol: udp
          LogConfiguration:
            LogDriver: awslogs
            Options:
              awslogs-region: us-west-2
              awslogs-stream-prefix: Factorio1
              awslogs-group:
                Ref: LogGroup
  Cluster:
    Type: AWS::ECS::Cluster
    Properties:
      ClusterName: Factorio1Cluster
  Service:
    Type: AWS::ECS::Service
    Properties: 
      ServiceName: Factorio1Service
      Cluster:
        Ref: Cluster
      TaskDefinition:
        Ref: TaskDefinition
      DesiredCount: 1
      LaunchType: FARGATE
      NetworkConfiguration: 
        AwsvpcConfiguration:
          AssignPublicIp: ENABLED
          Subnets:
            - Ref: PublicSubnet
          SecurityGroups:
            - Ref: ContainerSecurityGroup



#- IpProtocol: tcp
#  FromPort: 80
#  ToPort: 80
#  CidrIp: 0.0.0.0/0
#- Name: nginx1
#  Image: nginx:latest
#  PortMappings: 
#    - ContainerPort: 80
#      HostPort: 80
#      Protocol: tcp
